@@ -46,6 +46,7 @@
 		<Unit filename="drawRectOutline.cpp" />
 		<Unit filename="exports.cpp" />
 		<Unit filename="fast_atof.cpp" />
+		<Unit filename="flyCircleAnimator.cpp" />
 		<Unit filename="guiDisabledMenu.cpp" />
 		<Unit filename="irrCoreEquals.cpp" />
 		<Unit filename="line2dIntersectWith.cpp" />
