@@ -206,6 +206,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\flyCircleAnimator.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\guiDisabledMenu.cpp"
 				>
 			</File>
